New feature of options is added in medicine saling module which auto generate by data of medicine in stock

--- a/templates/elements.html
+++ b/templates/elements.html
@@ -114,6 +114,15 @@
 	<!-- page section end-->
 
 
+                    <div class="col-sm-6">
+								<input type="text" name="name" placeholder="Your name">
+							</div>
+							<div class="col-sm-6">
+								<input type="text" name="email" placeholder="Your email">
+							</div>
+                </div>
+
+
 
 
 
