--- a/templates/contact.html
+++ b/templates/contact.html
@@ -47,10 +47,11 @@
 		<nav>
 			<ul class="menu-list">
 				<li><a href="home.html">Home</a></li>
-				<li><a href="masters">Services</a></li>
-				<li><a href="datas">Blog</a></li>
+				<li><a href="masters">Masters</a></li>
+				<li><a href="datas">Datas</a></li>
+                <li><a href="reports">Reports</a></li>
 				<li class="active"><a href="contact.html">Contact</a></li>
-				<li><a href="elements.html">Elements</a></li>
+
 			</ul>
 		</nav>
 	</header>
@@ -64,7 +65,7 @@
 			<div class="page-info">
 				<h2>Contact</h2>
 				<div class="page-links">
-					<a href="#">Home</a>
+					<a href="home.html">Home</a>
 					<span>Contact</span>
 				</div>
 			</div>
@@ -84,8 +85,8 @@
 				<!-- single member -->
 				<div class="col-sm-4">
 					<div class="member">
-						<img src="{%static "img/team/1.jpg"%}" alt="">
-						<h2>Christinne Williams</h2>
+						<img src="{%static "img/team/a7.jpg"%}" alt="">
+						<h2>MUHAMMAD ALYAN</h2>
 						<h3>Project Manager</h3>
 					</div>
 				</div>
@@ -93,67 +94,34 @@
 				<div class="col-sm-4">
 					<div class="member">
 						<img src="{%static "img/team/2.jpg"%}" alt="">
-						<h2>Christinne Williams</h2>
+						<h2>FAJAR</h2>
 						<h3>Junior developer</h3>
 					</div>
 				</div>
 				<!-- single member -->
 				<div class="col-sm-4">
 					<div class="member">
-						<img src="{%static "img/team/3.jpg"%}" alt="">
-						<h2>Christinne Williams</h2>
+						<img src="{%static "img/team/a1.jpg"%}" alt="">
+						<h2>HARIS</h2>
 						<h3>Digital designer</h3>
 					</div>
 				</div>
 			</div>
+            <br>
+
+
 		</div>
 	</div>
 	<!-- Team Section end-->
 
 	
 
-	<!-- Contact section -->
-	<div class="contact-section spad fix">
-		<div class="container">
-			<div class="row">
-				<!-- contact info -->
-				<div class="col-md-5 col-md-offset-1 contact-info col-push">
-					<div class="section-title left">
-						<h2>Contact us</h2>
-					</div>
-					<p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. </p>
-					<h3 class="mt60">Main Office</h3>
-					<p class="con-item">C/ Libertad, 34 <br> 05200 Arévalo </p>
-					<p class="con-item">0034 37483 2445 322</p>
-					<p class="con-item">hello@company.com</p>
-				</div>
-				<!-- contact form -->
-				<div class="col-md-6 col-pull">
-					<form class="form-class" id="con_form">
-						<div class="row">
-							<div class="col-sm-6">
-								<input type="text" name="name" placeholder="Your name">
-							</div>
-							<div class="col-sm-6">
-								<input type="text" name="email" placeholder="Your email">
-							</div>
-							<div class="col-sm-12">
-								<input type="text" name="subject" placeholder="Subject">
-								<textarea name="message" placeholder="Message"></textarea>
-								<button class="site-btn">send</button>
-							</div>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Contact section end-->
+
 
 
 	<!-- Footer section -->
 	<footer class="footer-section">
-		<h2>2017 All rights reserved. Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></h2>
+		<h2 style="color: #FFFFFF">2020 All rights reserved. Designed by ALYAN TECHNOLOGIES</h2>
 	</footer>
 	<!-- Footer section end -->
 
@@ -165,7 +133,6 @@
 	<script src="{%static "js/magnific-popup.min.js" %}"></script>
 	<script src="{%static "js/owl.carousel.min.js" %}"></script>
 	<script src="{%static "js/circle-progress.min.js" %}"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0YyDTa0qqOjIerob2VTIwo_XVMhrruxo"></script>
 	<script src="{%static "js/map.js" %}"></script>
 	<script src="{%static "js/main.js" %}"></script>
 </body>
